data/apps/argocd/traefik/httproute-dashbboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "traefik.xxx.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard # crucial note: location -> traefik.xxx.local/dashboard
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: api@internal
